--- a/index.html
+++ b/index.html
@@ -1,7 +1,131 @@
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Patient Health Guardian</title>
-</html>
+---
+layout: home
+title: Gestão para Assistência em Saúde
+description: PH Guardian é uma plataforma de gestão para assistência em saúde, com foco no controle e uso racional de antimicrobianos e nas atuações da CCIH
+description_html: <span>PH Guardian é uma plataforma de gestão para assistência em saúde</span>,<br> com foco no controle e uso racional de antimicrobianos e nas atuações da CCIH
+---
+
+<div>
+    <h2 class="home center">
+        Plataforma para
+        <br>
+        <span>controle e gestão de antimicrobianos</span>
+    </h2>
+    <p class="title-desc center">
+        Nossa plataforma promove a implementação ou complementação do serviço de controle de infecção hospitalar e uso racional de antimicrobianos.
+    </p>
+</div>
+
+
+
+<div class="modules">
+    <div>
+        <img src="assets/images/hospital.svg" alt="">
+        <h3>Gestão de CCIH</h3>
+        <p>
+            Controle de infecção hospitalar, com
+            valorização dos dados coletados e das análises epidemiológicas, 
+            complementando o sistema institucional vigente.
+        </p>
+    </div>
+    <div>
+        <img src="assets/images/farmacia.svg" alt="">
+        <h3>Farmácia</h3>
+        <p>
+            Controle e uso racional de antimicrobianos, potencializando a tomada de decisões e reduções de custos.
+        </p>
+    </div>
+    <div>
+        <img src="assets/images/enfermagem.svg" alt="">
+        <h3>Enfermagem</h3>
+        <p>
+            Cuidados com enfermagem, trazendo diversos benefícios ao paciente.
+        </p>
+    </div>
+</div>
+<div>
+    <h2 class="home center">
+        Consultoria
+        <br>
+        <span>Assessoria Clínica Virtual</span>
+    </h2>
+    <p class="title-desc center">
+    Especialistas que vão auxiliar a
+    equipe assistencial na tomada de decisões sobre a investigação clínica e o
+    tratamento direcionado do paciente.
+    </p>
+</div>
+
+
+
+<div class="modules">
+    <div>
+        <img src="assets/images/tela.svg" alt="">
+        <h3>Consultoria</h3>
+        <p>
+            Diversas especialidades clínicas, auxiliando o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
+        </p>
+    </div>
+    <div>
+        <img src="assets/images/parecer.svg" alt="">
+        <h3>Parecer médico</h3>
+        <p>
+            Consultoria médica remota, via parecer em plataforma própria.
+        </p>
+    </div>
+</div>
+
+
+<div class="info">
+    <h2 class="home center">
+        PH Guardian na medida
+        <br>
+        <span>para o seu Hospital</span>
+    </h2>
+
+    <div>
+        <img src="assets/images/alynny.jpg" alt="Alynny Martinusso">
+        <div>
+        <p class="name">
+            Alynny Martinusso
+        </p>
+        <p class="occupation">
+            Farmacêutica - Coordenadora da Assistência Farmacêutica
+        </p>
+        <p>
+            A plataforma de gestão, dividido em módulos focando nas diferentes áreas operacionais para a gestão e controle de antimicrobianos e infecção relacionada à assistência em saúde, para as áreas médica, enfermagem, farmácia e análises clínicas, complementando o sistema institucional vigente.
+        </p>
+        </div>
+    </div>
+    <div>
+        <img src="assets/images/dra-rafaela.jpg" alt="Dra. Rafaela Altoé de Lima">
+        <div>
+        <p class="name">
+            Dra. Rafaela Altoé de Lima
+        </p>
+        <p class="occupation">
+            Médica  - Coordenadora da Assessoria Médica
+        </p>
+        <p>
+            O serviço de Consultoria Médica Remota, via parecer em plataforma própria, para diversas especialidades clínicas, auxilia o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
+        </p>
+        </div>
+    </div>
+    <div>
+        <img src="assets/images/pedro.jpg" alt="Dr. Pedro Peçanha">
+        <div>
+        <p class="name">
+            Dr. Pedro Peçanha
+        </p>
+        <p class="occupation">
+            Médico - CEO
+        </p>
+        <p>
+            O software se diferencia pela valorização dos dados coletados e das análises epidemiológicas hospitalar, fornecendo de forma rápida e segura as estatísticas necessárias para a tomada de decisões, reduções de custos, trazendo benefícios a instituição e ao paciente.
+        </p>
+        </div>
+    </div>
+</div>
+
+
+{%- include home-contact.html -%}
