add mobile responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: PH Guardian é uma plataforma de gestão para assistência em saúd
 description_html: <span>PH Guardian é uma plataforma de gestão para assistência em saúde</span>,<br> com foco no controle e uso racional de antimicrobianos e nas atuações da CCIH
 ---
 
-<div>
+<div class="middle">
     <h2 class="home center">
         Plataforma para
         <br>
