--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
 </div>
 <div>
     <h2 class="home center">
-        Consultoria
+        Assessoria
         <br>
-        <span>Assessoria Clínica Virtual</span>
+        <span>Clínica Virtual</span>
     </h2>
     <p class="title-desc center">
     Especialistas que vão auxiliar a
@@ -61,7 +61,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
 <div class="modules">
     <div>
         <img src="assets/images/tela.svg" alt="">
-        <h3>Consultoria</h3>
+        <h3>Assessoria</h3>
         <p>
             Diversas especialidades clínicas, auxiliando o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
         </p>
@@ -70,7 +70,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
         <img src="assets/images/parecer.svg" alt="">
         <h3>Parecer médico</h3>
         <p>
-            Consultoria médica remota, via parecer em plataforma própria.
+            Assessoria médica remota, via parecer em plataforma própria.
         </p>
     </div>
 </div>
@@ -104,10 +104,10 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
             Dra. Rafaela Altoé de Lima
         </p>
         <p class="occupation">
-            Médica  - Coordenadora da Assessoria Médica
+            Médica - Coordenadora da Assessoria Médica
         </p>
         <p>
-            O serviço de Consultoria Médica Remota, via parecer em plataforma própria, para diversas especialidades clínicas, auxilia o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
+            O serviço de Assessoria Médica Remota, via parecer em plataforma própria, para diversas especialidades clínicas, auxilia o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
         </p>
         </div>
     </div>
