--- a/quem-somos.html
+++ b/quem-somos.html
@@ -17,7 +17,7 @@ description: Patient Health Guardian
                 Nossa plataforma para controle e gestão de antimicrobianos, promove a implementação ou complementação do serviço de <a href="/ccih">controle de infecção hospitalar</a> e uso racional de antimicrobianos.
             </p>
             <p class="larger">
-                Aliado a isso oferecemos o serviço de <a href="/consultoria">consultoria médica remota</a>, via parecer em plataforma própria, para diversas especialidades clínicas, auxiliando o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
+                Aliado a isso oferecemos o serviço de <a href="/assessoria">Assessoria médica remota</a>, via parecer em plataforma própria, para diversas especialidades clínicas, auxiliando o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
             </p>
         </div>
         <img src="assets/images/quem-somos.jpg" alt="">
