--- a/assessoria.html
+++ b/assessoria.html
@@ -1,8 +1,8 @@
 ---
 layout: home
-title: Consultoria 
-description: Consultoria Médica Remota, via parecer em plataforma própria
-description_html: Consultoria Médica Remota <br> <span>via parecer em plataforma própria</span>
+title: Assessoria 
+description: Assessoria Médica Remota, via parecer em plataforma própria
+description_html: Assessoria Médica Remota <br> <span>via parecer em plataforma própria</span>
 ---
 
 <div class="middle">
@@ -32,7 +32,7 @@ até 7 dias após a data da solicitação.
         Planos e valores
     </h2>
     <p class="center">
-        Planos exclusivos para a prestação de Consultoria Médica Remota (Assessoria Clínica Virtual).
+        Planos exclusivos para a prestação de Assessoria Médica Remota (Assessoria Clínica Virtual).
         <br>
         Planos e preços para Plataforma para Controle e Gestão de Antimicrobianos, <a href="/planos-precos.html"> consulte aqui</a>.
     </p>
