--- a/planos-precos.html
+++ b/planos-precos.html
@@ -118,11 +118,11 @@ description: Descubra o plano ideal para o seu hospital ou clínica
 <div class="note">
 
     <p>
-        A prestação de Consultoria Médica Remota (Assessoria Clínica Virtual)
+        A prestação de Assessoria Médica Remota (Assessoria Clínica Virtual)
         <strong>NÃO</strong> está inclusa nos
-        planos e preços para Plataforma para Controle e Gestão de Antimicrobianos.
+        planos e preços para Plataforma para Gestão de Infecção Relacionada à Assistência em Saúde.
         <br>
-         Saiba mais sobre o <a href="/consultoria">serviço de Consultoria clicando aqui</a>.
+         Saiba mais sobre o <a href="/assessoria">serviço de Assessoria clicando aqui</a>.
     </p>
 
 </div>
