--- a/planos-precos.html
+++ b/planos-precos.html
@@ -7,7 +7,7 @@ description: Descubra o plano ideal para o seu hospital ou clínica
 <div class="plans">
     <div class="flex-item-1">
         <div>
-            <h3>Essencial</h3>
+            <h3>Gestão básica</h3>
             <p>
                 Até 5 usuários
             </p>
@@ -21,6 +21,9 @@ description: Descubra o plano ideal para o seu hospital ou clínica
             </li>
             <li class="check-mark">
                 Cuidados com enfermagem
+            </li>
+            <li class="check-mark">
+                Coleta de dados dos pacientes
             </li>
             <li class="check-mark">
                 Suporte via chat e chamados
@@ -37,37 +40,7 @@ description: Descubra o plano ideal para o seu hospital ou clínica
     </div>
     <div class="flex-item-1">
         <div>
-            <h3>Controle</h3>
-            <p>
-                Até 10 usuários
-            </p>
-        </div>
-        <ul class="position-relative flex-auto">
-            <li class="leftwards-arrow">
-                Tudo incluso no item Essencial
-            </li>
-            <li class="check-mark">
-                Até 10 usuários
-            </li>
-            <li class="check-mark">
-                Notificações via SMS e E-mail
-            </li>
-            <li class="check-mark">
-                Farmácia
-            </li>
-        </ul>
-        <div>
-            <p class="price">
-                R$
-                <span>1.850</span>
-                /mês
-            </p>
-            <a class="button" href="#">Entre em contato</a>
-        </div>
-    </div>
-    <div class="flex-item-1">
-        <div>
-            <h3>Elite</h3>
+            <h3>Gestão Completa</h3>
             <p>
                 Até 20 usuários
             </p>
@@ -78,6 +51,15 @@ description: Descubra o plano ideal para o seu hospital ou clínica
             </li>
             <li class="check-mark">
                 Até 20 usuários
+            </li>
+            <li class="check-mark">
+                Notificações via SMS e E-mail
+            </li>
+            <li class="check-mark">
+                Farmácia
+            </li>
+            <li class="check-mark">
+                Laboratório
             </li>
             <li class="check-mark">
                 Suporte via telefone
