--- a/planos-precos.html
+++ b/planos-precos.html
@@ -7,12 +7,15 @@ description: Descubra o plano ideal para o seu hospital ou clínica
 <div class="plans">
     <div class="flex-item-1">
         <div>
-            <h3>Gestão básica</h3>
+            <h3>Gestão Básica</h3>
             <p>
-                Até 5 usuários
+                Suporte via chat e chamados (Horário comercial)
             </p>
         </div>
         <ul class="position-relative flex-auto">
+            <li class="infinity">
+                Cadastro ilimitado de usuários
+            </li>
             <li class="infinity">
                 Cadastro ilimitado de pacientes 
             </li>
@@ -25,16 +28,8 @@ description: Descubra o plano ideal para o seu hospital ou clínica
             <li class="check-mark">
                 Coleta de dados dos pacientes
             </li>
-            <li class="check-mark">
-                Suporte via chat e chamados
-            </li>
         </ul>
         <div>
-            <p class="price">
-                R$
-                <span>1.000</span>
-                /mês
-            </p>
             <a class="button" href="#">Entre em contato</a>
         </div>
     </div>
@@ -42,12 +37,12 @@ description: Descubra o plano ideal para o seu hospital ou clínica
         <div>
             <h3>Gestão Completa</h3>
             <p>
-                Até 20 usuários
+                Suporte via telefone (Horário comercial)
             </p>
         </div>
         <ul class="position-relative flex-auto">
             <li class="leftwards-arrow">
-                Tudo incluso no item Controle
+                Tudo incluso na Gestão Básica
             </li>
             <li class="check-mark">
                 Até 20 usuários
@@ -62,15 +57,10 @@ description: Descubra o plano ideal para o seu hospital ou clínica
                 Laboratório
             </li>
             <li class="check-mark">
-                Suporte via telefone
+                
             </li>
         </ul>
         <div>
-            <p class="price">
-                R$
-                <span>2.500</span>
-                /mês
-            </p>
             <a class="button" href="#">Entre em contato</a>
         </div>
     </div>
@@ -81,7 +71,7 @@ description: Descubra o plano ideal para o seu hospital ou clínica
         </div>
         <ul class="position-relative flex-auto">
             <li class="leftwards-arrow">
-                Tudo incluso no item Elite
+                Tudo incluso na Gestão Completa
             </li>
             <li class="infinity">
                 Acesso a toda nossa rede de especialistas
