--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
         <img src="assets/images/enfermagem.svg" alt="">
         <h3>Enfermagem</h3>
         <p>
-            Cuidados com enfermagem, trazendo diversos benefícios ao paciente.
+            Contribuir para o desenvolvimento de novas linhas de ação no âmbito do controle de infecção.
         </p>
     </div>
 </div>
