--- a/quem-somos.html
+++ b/quem-somos.html
@@ -42,6 +42,7 @@ description: Patient Health Guardian
                Respeito à vida 
             </h3>
             <p>
+                O respeito a vida humana é o direito mais importante de todos.
             </p>
         </div>
         <div class="flex-item-1">
@@ -50,6 +51,7 @@ description: Patient Health Guardian
                 Respeito pelo indivíduo
             </h3>
             <p>
+Cada individuo é único e merece ter sua assistência a saúde individualizada e sua integridade resguardada.
             </p>
         </div>
         <div class="flex-item-1">
