--- a/assessoria.html
+++ b/assessoria.html
@@ -43,7 +43,7 @@ até 7 dias após a data da solicitação.
         <div>
             <h3>Bronze</h3>
             <p>
-                Até 10 consultorias 
+                Até 10 assessorias 
                 <br>
                 por mês
             </p>
@@ -56,7 +56,7 @@ até 7 dias após a data da solicitação.
                 Cadastro ilimitado de médicos
             </li>
             <li class="check-mark">
-                Até 10 consultorias por mês
+                Até 10 assessorias por mês
                 <br>
                 <span>Não é progressivo</span>
             </li>
@@ -77,7 +77,7 @@ até 7 dias após a data da solicitação.
         <div>
             <h3>Prata</h3>
             <p>
-                Até 20 consultorias 
+                Até 20 assessorias
                 <br>
                 por mês
             </p>
@@ -87,7 +87,7 @@ até 7 dias após a data da solicitação.
                 Tudo incluso no item Bronze
             </li>
             <li class="check-mark">
-                Até 20 consultorias por mês
+                Até 20 assessorias por mês
                 <br>
                 <span>Não é progressivo</span>
             </li>
@@ -108,7 +108,7 @@ até 7 dias após a data da solicitação.
         <div>
             <h3>Ouro</h3>
             <p>
-                Até 50 consultorias <br>
+                Até 50 assessorias <br>
                 por mês
             </p>
         </div>
@@ -117,7 +117,7 @@ até 7 dias após a data da solicitação.
                 Tudo incluso no item Prata
             </li>
             <li class="check-mark">
-                Até 50 consultorias por mês
+                Até 50 assessorias por mês
                 <br>
                 <span>Não é progressivo</span>
             </li>
@@ -141,7 +141,7 @@ até 7 dias após a data da solicitação.
                 Tudo incluso no item Elite
             </li>
             <li class="infinity">
-                Número ilimitado de consultorias
+                Número ilimitado de assessorias
             </li>
         </ul>
         <div>
