--- a/assessoria.html
+++ b/assessoria.html
@@ -41,7 +41,7 @@ até 7 dias após a data da solicitação.
 <div class="plans">
     <div class="flex-item-1">
         <div>
-            <h3>Bronze</h3>
+            <h3>Essencial</h3>
             <p>
                 Até 10 assessorias 
                 <br>
@@ -70,12 +70,12 @@ até 7 dias após a data da solicitação.
                 <span>5.000</span>
                 /mês
             </p>
-            <a class="button" href="#">Entre em contato</a>
+            <a class="button" href="/contato">Entre em contato</a>
         </div>
     </div>
     <div class="flex-item-1">
         <div>
-            <h3>Prata</h3>
+            <h3>Completo</h3>
             <p>
                 Até 20 assessorias
                 <br>
@@ -101,34 +101,7 @@ até 7 dias após a data da solicitação.
                 <span>9.000</span>
                 /mês
             </p>
-            <a class="button" href="#">Entre em contato</a>
-        </div>
-    </div>
-    <div class="flex-item-1">
-        <div>
-            <h3>Ouro</h3>
-            <p>
-                Até 50 assessorias <br>
-                por mês
-            </p>
-        </div>
-        <ul class="position-relative flex-auto">
-            <li class="leftwards-arrow">
-                Tudo incluso no item Prata
-            </li>
-            <li class="check-mark">
-                Até 50 assessorias por mês
-                <br>
-                <span>Não é progressivo</span>
-            </li>
-        </ul>
-        <div>
-            <p class="price">
-                R$
-                <span>20.000</span>
-                /mês
-            </p>
-            <a class="button" href="#">Entre em contato</a>
+            <a class="button" href="/contato">Entre em contato</a>
         </div>
     </div>
     <div class="flex-item-1">
@@ -145,7 +118,7 @@ até 7 dias após a data da solicitação.
             </li>
         </ul>
         <div>
-            <a class="button" href="#">Entre em contato</a>
+            <a class="button" href="/contato">Entre em contato</a>
         </div>
     </div>
 </div>
