--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
 
 <div class="modules">
     <div>
-        <img src="assets/images/hospital.svg" alt="">
+        <img class="modules_icon" src="assets/images/hospital.svg" alt="">
         <h3>Gestão de CCIH</h3>
         <p>
             Controle de infecção hospitalar, com
@@ -29,14 +29,14 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
         </p>
     </div>
     <div>
-        <img src="assets/images/pharmacy.png" alt="">
+        <img class="modules_icon" src="assets/images/pharmacy.png" alt="">
         <h3>Farmácia</h3>
         <p>
             Controle e uso racional de antimicrobianos, potencializando a tomada de decisões e reduções de custos.
         </p>
     </div>
     <div>
-        <img src="assets/images/nurse.png" alt="">
+        <img class="modules_icon" src="assets/images/nurse.png" alt="">
         <h3>Enfermagem</h3>
         <p>
             Contribuir para o desenvolvimento de novas linhas de ação no âmbito do controle de infecção.
@@ -60,14 +60,14 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
 
 <div class="modules">
     <div>
-        <img src="assets/images/heart-rate.png" alt="">
+        <img class="modules_icon" src="assets/images/heart-rate.png" alt="">
         <h3>Assessoria</h3>
         <p>
             Diversas especialidades clínicas, auxiliando o médico assistente na condução de seu paciente em qualquer localidade do Brasil.
         </p>
     </div>
     <div>
-        <img src="assets/images/medical-history.png" alt="">
+        <img class="modules_icon" src="assets/images/medical-history.png" alt="">
         <h3>Parecer médico</h3>
         <p>
             Assessoria médica remota, via parecer em plataforma própria.
