add texto perguntas frequentes

--- a/planos-precos.html
+++ b/planos-precos.html
@@ -108,77 +108,58 @@ description: Descubra o plano ideal para o seu hospital ou clínica
         </div>
         <div class="answer">
             <p>
+                O PH Guardian foi desenvolvido, por uma equipe formada por médicos e farmacêuticos,
+                com o objetivo de fornecer de forma rápida e segura as informações necessárias para a tomada de decisões.
+            </p>
+            <p>
+                Com foco no controle e uso racional de antimicrobianos e nas atuações da CCIH conseguimos criar uma plataforma
+                fácil de usar tornando as tarefas do dia a dia simples e confortáveis.
             </p>
         </div>
 
         <div class="question">
-            2 - Há um período mínimo de contrato?
+            2 - Posso trocar de plano depois de contratar?
         </div>
         <div class="answer">
             <p>
-                Não, a contratação de um plano não exige um período de tempo mínimo e não é cobrada nenhuma multa por cancelamento.
+                A mudança de plano é permitido, bastando entrar em contato com a nossa equipe comercial.
             </p>
         </div>
 
         <div class="question">
-3 - Posso trocar de plano depois de contratar?
-
+            3 - E se eu tiver dúvidas durante o uso do PH Guardian?
         </div>
         <div class="answer">
             <p>
+                Temos um suporte dedicado que estará disponível para atendimento durante todo o horário comercial.
             </p>
         </div>
 
         <div class="question">
-4 - E se eu tiver dúvidas durante o uso do PH Guardian?
-
+            4 - E se eu precisar cadastrar mais usuários?
         </div>
         <div class="answer">
             <p>
+            A contratação de novos usuários é fácil e rápido. Tudo feito dentro do sistema sem nenhuma burocracia.
             </p>
         </div>
 
         <div class="question">
-5 - Por que a implantação é cobrada à parte?
-
+            5 - Meus dados estarão seguros?
         </div>
         <div class="answer">
             <p>
+                Todos os dados trafegados pelo PH Guardian são criptografados e toda informação é armazenada em servidores atualizados e mantidos nos mais altos níveis de segurança existentes hoje no mercado.
             </p>
         </div>
 
         <div class="question">
-6 - Quais as formas de pagamento aceitas?
+            6 - Posso acessar o PH Guardian qualquer lugar?
 
         </div>
         <div class="answer">
             <p>
-            </p>
-        </div>
-
-        <div class="question">
-7 - E se eu precisar cadastrar mais usuários?
-
-        </div>
-        <div class="answer">
-            <p>
-            </p>
-        </div>
-
-        <div class="question">
-8 - Meus dados estarão seguros?
-        </div>
-        <div class="answer">
-            <p>
-            </p>
-        </div>
-
-        <div class="question">
-9 - Posso acessar o PH Guardian qualquer lugar?
-
-        </div>
-        <div class="answer">
-            <p>
+                Por estar em ambiente web (em nuvem), o PH Guardian pode ser acessado de qualquer computador que tenha internet. Com isso, médicos, enfermeiros, farmacêuticos, colaboradores e gestores podem verificar e administrar dados remotamente e em qualquer horário.
             </p>
         </div>
 
