refactor texto ccih

--- a/ccih.html
+++ b/ccih.html
@@ -8,17 +8,19 @@ description: Controle de Infecção Hospitalar
     <h2>
         O que é CCIH?
     </h2>
+
     <p>
-        A portaria do Ministério da Saúde, nº 2616, de  12 de maio de 1998, exige a criação de uma Comissão de Controle de Infecção Hospitalar (CCIH) para que os hospitais coloquem em prática as ações do PCIH.
+        A CCIH (Comissão de Controle de Infecção Hospitalar) é uma exigência da portaria do Ministério da Saúde, nº 2616, de 12 de maio de 1998
+        para que os hospitais coloquem em prática as ações do PCIH (Programa Nacional de Controle de Infecção Hospitalar).
     </p>
     <p>
-        Somente profissionais da saúde com nível superior podem ser integrantes da Comissão de Controle de Infecção Hospitalar. A CCIH deve ser composta por membros consultores e executores.
+        A comissão deve ser formada somente por profissionais da saúde com nível superior, e deve ser composta por membros consultores e executores.
     </p>
     <p>
-        Na categoria consultores, os integrantes representam e coordenam os métodos de prevenção de controle de infecção hospitalar dos serviços médicos, de enfermagem, de farmácia, de administração e laboratório de microbiologia.
+    Na categoria consultores, os integrantes representam e coordenam os métodos de prevenção de <strong>controle de infecção hospitalar dos serviços médicos</strong>, de enfermagem, de farmácia, de administração e laboratório de microbiologia.
     </p>
     <p>
-        Já os executores da CCIH realizam as ações do PCIH. É importante que um dos membros executores seja um enfermeiro.
+        Já os executores da CCIH realizam as ações do PCIH. <strong>É importante que um dos membros executores seja um enfermeiro</strong>.
     </p>
     <h3>
         Quais as principais atribuições da Comissão de Controle de Infecção Hospitalar?
@@ -56,10 +58,6 @@ description: Controle de Infecção Hospitalar
             Estabelecer um plano de contingência em caso de infecção detectada.
         </li>
     </ul>
-
-    <p>
-        O Programa de Controle de Infecção Hospitalar deve ser contemplado com diversas ações e rotinas de prevenção, como exemplo, a higienização correta das mãos.
-    </p>
 
     <div class="note">
         <h3>
