--- a/ccih.html
+++ b/ccih.html
@@ -1,5 +1,3 @@
----
-layout: home
 title: CCIH
 description: Controle de Infecção Hospitalar
 ---
@@ -10,7 +8,7 @@ description: Controle de Infecção Hospitalar
     </h2>
 
     <p>
-        A CCIH (Comissão de Controle de Infecção Hospitalar) é uma exigência da portaria do Ministério da Saúde, nº 2616, de 12 de maio de 1998
+    A CCIH (Comissão de Controle de Infecção Hospitalar) é uma exigência da <a href="http://bvsms.saude.gov.br/bvs/saudelegis/gm/1998/prt2616_12_05_1998.html">portaria do Ministério da Saúde, nº 2616, de 12 de maio de 1998</a>
         para que os hospitais coloquem em prática as ações do PCIH (Programa Nacional de Controle de Infecção Hospitalar).
     </p>
     <p>
