--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
     </h2>
 
     <div>
-        <img src="assets/images/alynny.jpg" alt="Alynny Martinusso">
+        <img src="assets/images/alynny.jpeg" alt="Alynny Martinusso">
         <div>
         <p class="name">
             Alynny Martinusso
@@ -98,7 +98,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
         </div>
     </div>
     <div>
-        <img src="assets/images/dra-rafaela.jpg" alt="Dra. Rafaela Altoé de Lima">
+        <img src="assets/images/dra-rafaela.jpeg" alt="Dra. Rafaela Altoé de Lima">
         <div>
         <p class="name">
             Dra. Rafaela Altoé de Lima
@@ -112,7 +112,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
         </div>
     </div>
     <div>
-        <img src="assets/images/pedro.jpg" alt="Dr. Pedro Peçanha">
+        <img src="assets/images/pedro.jpeg" alt="Dr. Pedro Peçanha">
         <div>
         <p class="name">
             Dr. Pedro Peçanha
