--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ description_html: <span>PH Guardian é uma plataforma de gestão para assistênc
             Farmacêutica - Coordenadora da Assistência Farmacêutica
         </p>
         <p>
-            A plataforma de gestão, dividido em módulos focando nas diferentes áreas operacionais para a gestão e controle de antimicrobianos e infecção relacionada à assistência em saúde, para as áreas médica, enfermagem, farmácia e análises clínicas, complementando o sistema institucional vigente.
+            A plataforma de gestão, dividida em módulos focando nas diferentes áreas operacionais para a gestão e controle de antimicrobianos e infecção relacionada à assistência em saúde, para as áreas médica, enfermagem, farmácia e análises clínicas, complementando o sistema institucional vigente.
         </p>
         </div>
     </div>
